Got form infos.

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
                     <li id="header_inbox_bar" class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="index.html#">
                             <i class="fa fa-envelope-o"></i>
-                            <span class="badge bg-theme">{% print n_requests %}</span>
+                            <span class="badge bg-theme">{{ n_requests }}</span>
                         </a>
                         <ul class="dropdown-menu extended inbox">
                             <div class="notify-arrow notify-arrow-green"></div>
