--- a/templates/donation_add.html
+++ b/templates/donation_add.html
@@ -7,8 +7,8 @@
 
 <h1 class="title">Add Donation for Donativa</h1>
 {% from "includes/_formhelpers.html" import render_field %}
-<form method="POST" action="">
-  
+<form method="POST" enctype="multipart/form-data" action="">
+  <p><input type=file name=file>
   <div class="form-group">
     {{render_field(form.title, class_="form-control")}}
   </div>
@@ -31,7 +31,6 @@
   <div>
     {{ form.donation_date(class="dtpick") }}
   </div>
-
   <p><input type="submit" class="btn btn-primary submit-btn" value="Submit"></p>
 </form>
 {% endblock %}
