--- a/templates/donation_add.html
+++ b/templates/donation_add.html
@@ -8,6 +8,7 @@
 <h1 class="title">Add Donation for Donativa</h1>
 {% from "includes/_formhelpers.html" import render_field %}
 <form method="POST" enctype="multipart/form-data" action="">
+<strong><p style='font-size=22px;'>Picture (Optional)</p></strong>
   <p><input type=file name=file>
   <div class="form-group">
     {{render_field(form.title, class_="form-control")}}
