--- a/templates/donationshistory.html
+++ b/templates/donationshistory.html
@@ -4,7 +4,7 @@
 
 {% block body %}	
 	<div class="col-md-12">
-	{% for j in requests_display %}
+	{% for j in myrequests %}
 		<div class="row" >
 			<div class="col-md-1 thumbnail" style="border: 1px solid #DDD">
 			<img src="https://scontent-mad1-1.xx.fbcdn.net/v/t1.0-9/12208710_880517135351049_2664080044137643377_n.jpg?oh=1f045b744226807b68290d8affa4fea1&oe=59C9D4B2">
