--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
           <li class="dropdown">
@@ -66,60 +66,20 @@
                             <li>
                                 <p class="green">You have {% print n_requests %} new messages</p>
                             </li>
+                            {% for j in myrequests %}
                             <li>
                                 <a class href="/donations_history/{{session.logged_in_user}}">
-                                    <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-zac.jpg")}}></span>
+                                    <span class="photo"><img alt="avatar" src="http://www.lavoixdelenfant.org/img/assosmembres/BAYTI.png"></span>
                                     <span class="subject">
-                                    <span class="from">Zac Snider</span>
+                                    <span class="from">{% print(j[2]) %}</span>
                                     <span class="time">Just now</span>
                                     </span>
                                     <span class="message">
-                                        Name of donation
+                                        {% print(j[0]) %}
                                     </span>
                                 </a>
                             </li>
-                            <li>
-                                <a class href="/donations_history/{{session.logged_in_user}}">
-                                    <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-divya.jpg")}}></span>
-                                    <span class="subject">
-                                    <span class="from">Divya Manian</span>
-                                    <span class="time">40 mins.</span>
-                                    </span>
-                                    <span class="message">
-                                    Name of donation
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a class href="/donations_history/{{session.logged_in_user}}">
-                                    <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-danro.jpg")}}></span>
-                                    <span class="subject">
-                                    <span class="from">Dan Rogers</span>
-                                    <span class="time">2 hrs.</span>
-                                    </span>
-                                    <span class="message">
-                                        Name of donation
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a class href="/donations_history/{{session.logged_in_user}}">
-                                    <span class="photo"><img alt="avatar" src={{url_for('static', filename="images/ui-sherman.jpg")}}></span>
-                                    <span class="subject">
-                                    <span class="from">Dj Sherman</span>
-                                    <span class="time">4 hrs.</span>
-                                    </span>
-                                    <span class="message">
-                                        Name of donation
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                  
-                                <a class href="/donations_history/{{session.logged_in_user}}" style="color:#337ab7;"><b>See all requests</b></style></a>
-                            </li>
-                        </ul>
-                    </li>
+                            {% endfor %}
                     <!-- inbox dropdown end -->
                 </ul>
                 <!--  notification end -->
