--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                             </li>
                             {% for j in myrequests %}
                             <li>
-                                <a class href="/donations_history/{{session.logged_in_user}}">
+                                <a class href="/myrequests">
                                     <span class="photo"><img alt="avatar" src="http://www.lavoixdelenfant.org/img/assosmembres/BAYTI.png"></span>
                                     <span class="subject">
                                     <span class="from">{% print(j[2]) %}</span>
