--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-    <title>Saykouk Wonderland</title>
+    <title>Log into Donativa!</title>
     <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/bootstrap.css')}} />
     <link type="text/css" rel="stylesheet" href={{url_for('static', filename='css/NewLogin.css')}} />
     <!--Import Google Icon Font-->
