--- a/static/css/index.css
+++ b/static/css/index.css
@@ -30,3 +30,10 @@
     padding-top: 10px;
 }
 
+.picture-card{
+    width: 300px;
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: 1px solid red;
+}
