--- a/templates/donation.html
+++ b/templates/donation.html
@@ -4,16 +4,13 @@
 {%endblock%}
 {% block body %}
 <div class="row">
-	<h2>Used Sweater and a Pair of Sneakers</h2>
-	<h4><small>17/06/2017 12:06AM</small></h4>
+	<h2>{{offer[3]}}</h2>
+	<h4><small>{{format_date_hour(offer[5])}}</small></h4>
 </div>
 <div class="row">
 	<div class="col-md-8">
-		<img src="https://gloimg.gearbest.com/gb/pdm-product-pic/Clothing/2016/10/17/goods-img/1477375682286174391.jpg">
-		<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat.</p>
+		<img class="donation-image" src={{"../static/donations/"+offer[2]}}>
+		<p class="lead">{{offer[4]}}</p>
 
 	
 	<div class="comments-container">
@@ -62,10 +59,12 @@
 	</div>
 	<div class="col-md-4">
 		<div class="details-text">
-			<button type="button" class="btn btn-primary btn-lg btn-block btn-request">Request Donation</button><br>
-			<a href="#" style="font-size:17px"><span class="glyphicon glyphicon-user"></span> <h5 style="display:inline;">Ayoub Kachkach</h5></a><br><br>
-			<a href="#" style="font-size:17px"><span class="glyphicon glyphicon-home"></span> <h5 style="display:inline;">Mohammedia</h5></a><br><br>
-			 <span class="glyphicon glyphicon-time time-icon"></span> <h5 class="time-text">12/06/2017 10:15</h5><br>
+			{%if session['logged_in']==True and session['type']==1%}
+			<button type="button" class="btn btn-primary btn-lg btn-block btn-request">Request Donation</button>
+			{%endif%}<br>
+			<a href={{url_for('profile',username=get_username(mysql, offer[1]) )}}  style="font-size:17px"><span class="glyphicon glyphicon-user"></span> <h5 style="display:inline;">{{get_username(mysql,offer[1])}}</h5></a><br><br>
+			<a style="font-size:17px"><span class="glyphicon glyphicon-home"></span> <h5 style="display:inline;">{{offer[10] +","}}<br>&emsp;&emsp;&emsp; {{offer[6]}}</h5></a><br><br>
+			 <span class="glyphicon glyphicon-time time-icon"></span> <h5 class="time-text">{{format_date_hour(offer[5])}}</h5><br>
 		</div>
 		
 	</div>
