--- a/templates/organization_signup.html
+++ b/templates/organization_signup.html
@@ -2,7 +2,9 @@
 {% block body %}
 <h1>Sign-up for Donativa</h1>
 {% from "includes/_formhelpers.html" import render_field %}
-<form method="POST" action="">
+<form method="POST" enctype="multipart/form-data" action="">
+<strong><p style='font-size=22px;'>Picture (Optional)</p></strong>
+  <p><input type=file name=file>
   <div class="form-group">
     {{render_field(form.name, class_="form-control")}}
   </div>
